--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -46,15 +46,17 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\G.Oscene\GameOverCam.cs" />
      <Compile Include="Assets\Singleton.cs" />
      <Compile Include="Assets\SingletonHelper.cs" />
-     <Compile Include="Assets\goScene\GameOverCam.cs" />
      <Compile Include="Assets\scripts\cameraStill.cs" />
+     <Compile Include="Assets\scripts\follow.cs" />
      <Compile Include="Assets\scripts\npcMovement.cs" />
      <Compile Include="Assets\scripts\npcText.cs" />
      <Compile Include="Assets\scripts\pauseScreen.cs" />
      <Compile Include="Assets\scripts\squareMovement.cs" />
      <Compile Include="Assets\scripts\timer.cs" />
+     <Compile Include="Assets\scripts\touchDie.cs" />
  <Reference Include="UnityEngine.Analytics">
  <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/UnityAnalytics/UnityEngine.Analytics.dll</HintPath>
  </Reference>
