--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -49,12 +49,13 @@
      <Compile Include="Assets\G.Oscene\GameOverCam.cs" />
      <Compile Include="Assets\Singleton.cs" />
      <Compile Include="Assets\SingletonHelper.cs" />
-     <Compile Include="Assets\randomMovement.cs" />
      <Compile Include="Assets\scripts\cameraStill.cs" />
      <Compile Include="Assets\scripts\follow.cs" />
      <Compile Include="Assets\scripts\npcMovement.cs" />
      <Compile Include="Assets\scripts\npcText.cs" />
+     <Compile Include="Assets\scripts\npcsfollowmove.cs" />
      <Compile Include="Assets\scripts\pauseScreen.cs" />
+     <Compile Include="Assets\scripts\randomMovement.cs" />
      <Compile Include="Assets\scripts\squareMovement.cs" />
      <Compile Include="Assets\scripts\timer.cs" />
      <Compile Include="Assets\scripts\touchDie.cs" />
