--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -49,7 +49,7 @@
      <Compile Include="Assets\G.Oscene\GameOverCam.cs" />
      <Compile Include="Assets\Singleton.cs" />
      <Compile Include="Assets\SingletonHelper.cs" />
-     <Compile Include="Assets\scripts\cameraStill.cs" />
+     <Compile Include="Assets\scripts\newCamera.cs" />
      <Compile Include="Assets\scripts\npcMovement.cs" />
      <Compile Include="Assets\scripts\npcText.cs" />
      <Compile Include="Assets\scripts\npcsfollowmove.cs" />
