--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -50,8 +50,8 @@
      <Compile Include="Assets\Singleton.cs" />
      <Compile Include="Assets\SingletonHelper.cs" />
      <Compile Include="Assets\deathCount.cs" />
-     <Compile Include="Assets\fallingPlat.cs" />
      <Compile Include="Assets\scripts\endState.cs" />
+     <Compile Include="Assets\scripts\fallingPlat.cs" />
      <Compile Include="Assets\scripts\flys.cs" />
      <Compile Include="Assets\scripts\followerScript.cs" />
      <Compile Include="Assets\scripts\newCamera.cs" />
