--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -50,12 +50,13 @@
      <Compile Include="Assets\Singleton.cs" />
      <Compile Include="Assets\SingletonHelper.cs" />
      <Compile Include="Assets\deathCount.cs" />
+     <Compile Include="Assets\dialogueHolder.cs" />
+     <Compile Include="Assets\scripts\dialogueManager.cs" />
      <Compile Include="Assets\scripts\endState.cs" />
      <Compile Include="Assets\scripts\fallingPlat.cs" />
      <Compile Include="Assets\scripts\flys.cs" />
      <Compile Include="Assets\scripts\followerScript.cs" />
      <Compile Include="Assets\scripts\newCamera.cs" />
-     <Compile Include="Assets\scripts\npcText.cs" />
      <Compile Include="Assets\scripts\pauseScreen.cs" />
      <Compile Include="Assets\scripts\randomMovement.cs" />
      <Compile Include="Assets\scripts\squareMovement.cs" />
