--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -50,6 +50,7 @@
      <Compile Include="Assets\Singleton.cs" />
      <Compile Include="Assets\SingletonHelper.cs" />
      <Compile Include="Assets\opening Scene\openingScene.cs" />
+     <Compile Include="Assets\retryDialogue.cs" />
      <Compile Include="Assets\scripts\deathCount.cs" />
      <Compile Include="Assets\scripts\dialogueHolder.cs" />
      <Compile Include="Assets\scripts\dialogueManager.cs" />
