--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -53,6 +53,7 @@
      <Compile Include="Assets\SingletonHelper.cs" />
      <Compile Include="Assets\Sound.cs" />
      <Compile Include="Assets\WalkConnect.cs" />
+     <Compile Include="Assets\musicGalSit.cs" />
      <Compile Include="Assets\opening Scene\openingScene.cs" />
      <Compile Include="Assets\scripts\deathCount.cs" />
      <Compile Include="Assets\scripts\dialogueHolder.cs" />
