--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -53,7 +53,6 @@
      <Compile Include="Assets\SingletonHelper.cs" />
      <Compile Include="Assets\Sound.cs" />
      <Compile Include="Assets\WalkConnect.cs" />
-     <Compile Include="Assets\musicGalSit.cs" />
      <Compile Include="Assets\opening Scene\openingScene.cs" />
      <Compile Include="Assets\outsideSounds.cs" />
      <Compile Include="Assets\scripts\deathCount.cs" />
@@ -65,6 +64,7 @@
      <Compile Include="Assets\scripts\fallingPlat.cs" />
      <Compile Include="Assets\scripts\flys.cs" />
      <Compile Include="Assets\scripts\followerScript.cs" />
+     <Compile Include="Assets\scripts\musicGalSit.cs" />
      <Compile Include="Assets\scripts\newCamera.cs" />
      <Compile Include="Assets\scripts\pauseScreen.cs" />
      <Compile Include="Assets\scripts\randomMovement.cs" />
