--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Animations\CritterAnim.cs" />
+     <Compile Include="Assets\Animations\textGl.cs" />
      <Compile Include="Assets\Music\BabysHeadset.cs" />
      <Compile Include="Assets\Singleton.cs" />
      <Compile Include="Assets\SingletonHelper.cs" />
