siusplau deixam en pau tho prego

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -52,6 +52,7 @@
      <Compile Include="Assets\Singleton.cs" />
      <Compile Include="Assets\SingletonHelper.cs" />
      <Compile Include="Assets\Sound.cs" />
+     <Compile Include="Assets\cheers.cs" />
      <Compile Include="Assets\scripts\GameOverCam.cs" />
      <Compile Include="Assets\scripts\bobbingscript.cs" />
      <Compile Include="Assets\scripts\cameraShake.cs" />
